Fixed hidden y-overflow & set fixed height to nav

--- a/view/public/scss/partials/_menu.scss
+++ b/view/public/scss/partials/_menu.scss
@@ -6,6 +6,7 @@ Accordion
   margin: 0;
   padding: 0;
   font-size: 18px;
+
   color: $accordion-menu-color;
   li {
     list-style: none;
@@ -74,7 +75,7 @@ nav#slide-menu {
 	float: left;
 	width: 100%;
 	max-width: $menu-width;
-	height: 100%;
+	overflow-y: auto;
 }
 
 
